// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> <Heading.h1 /> renders correctly 1`] = `
.c0 {
  color: #323232;
  font-size: 2.25rem;
  font-weight: 600;
  line-height: 1.5;
  margin: 0rem;
  margin-bottom: 0.5rem;
}

<h1
  className="c0"
  color="grey.1"
  fontSize="xxxxxl"
  fontWeight="bold"
>
  Hello world
</h1>
`;

exports[`<Heading /> <Heading.h1 /> renders correctly 2`] = `
.c0 {
  color: #323232;
  font-size: 2.25rem;
  font-weight: 600;
  line-height: 1.5;
  margin: 0rem;
  margin-bottom: 0.5rem;
}

<h1
  className="c0"
  color="grey.1"
  fontSize="xxxxxl"
  fontWeight="bold"
>
  Hello world
</h1>
`;

exports[`<Heading /> <Heading.h2 /> renders correctly 1`] = `
.c0 {
  color: #323232;
  font-size: 1.625rem;
  font-weight: 600;
  line-height: 1.5;
  margin: 0rem;
  margin-bottom: 0.5rem;
}

<h2
  className="c0"
  color="grey.1"
  fontSize="xxl"
  fontWeight="bold"
>
  Hello world
</h2>
`;

exports[`<Heading /> <Heading.h3 /> renders correctly 1`] = `
.c0 {
  color: #323232;
  font-size: 1.375rem;
  font-weight: 600;
  line-height: 1.5;
  margin: 0rem;
  margin-bottom: 0.5rem;
}

<h3
  className="c0"
  color="grey.1"
  fontSize="xl"
  fontWeight="bold"
>
  Hello world
</h3>
`;

exports[`<Heading /> <Heading.h4 /> renders correctly 1`] = `
.c0 {
  color: #323232;
  font-size: 1.125rem;
  font-weight: 600;
  line-height: 1.5;
  margin: 0rem;
  margin-bottom: 0.5rem;
}

<h4
  className="c0"
  color="grey.1"
  fontSize="lg"
  fontWeight="bold"
>
  Hello world
</h4>
`;

exports[`<Heading /> <Heading.h5 /> renders correctly 1`] = `
.c0 {
  color: #323232;
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.5;
  margin: 0rem;
  margin-bottom: 0.5rem;
}

<h5
  className="c0"
  color="grey.1"
  fontSize="base"
  fontWeight="bold"
>
  Hello world
</h5>
`;

exports[`<Heading /> <Heading.h6 /> renders correctly 1`] = `
.c0 {
  color: #323232;
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.5;
  margin: 0rem;
  margin-bottom: 0.5rem;
}

<h6
  className="c0"
  color="grey.1"
  fontSize="sm"
  fontWeight="bold"
>
  Hello world
</h6>
`;

exports[`<Heading /> renders correctly 1`] = `
.c0 {
  color: #323232;
  font-size: 1.125rem;
  font-weight: 600;
  line-height: 1.5;
  margin: 0rem;
  margin-bottom: 0.5rem;
}

<span
  className="c0"
  color="grey.1"
  fontSize="lg"
  fontWeight="bold"
>
  Hello world
</span>
`;
